Added in classnames dependency.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "classnames": "^2.2.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.8"
   }
