--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.2.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-motion": "^0.4.2",
     "underscore": "^1.8.3"
   }
 }
